# eegfmri_denoising

./: .coverage  README.md  Signal-resolver-hackathon.ipynb  coverage.xml  hackathon.py  pyproject.toml
.circleci/: config.yml
docs/: conf.py  eegfmri_denoising.rst  index.rst
docs/_build/: .buildinfo  eegfmri_denoising.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/.doctrees/: eegfmri_denoising.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/_sources/: modules.rst.txt
notebooks/: bads_detection_testing.ipynb  epi_pypulseq.seq  epi_sequence.seq  sphere_head_model_simulation.ipynb  test.ipynb
src/eegfmri_denoising/: __init__.py  datasets.py  denoising.py  quality_assurance.py  simulation.py
tests/: test_denoising.py
