[project]
name = "eegfmri-denoising"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=26.1.0",
    "coverage>=7.13.1",
    "coverage-badge>=1.1.2",
    "mne>=1.11.0",
    "numpy>=2.4.1",
    "pre-commit>=4.6.0",
    "pypulseq>=1.5.0.post1",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]

[project.scripts]
eegfmri-denoising = "eegfmri_denoising:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "sphinx>=9.0.4",
]
